<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Noor نور</string>
    <string name="t4">
        "هه‌ر بۆ خوایه‌ هه‌موو ناوه‌ جوان و پیرۆزه‌کان، جا ئه‌ی ئیمانداران به‌و ناوانه‌ دوعا و نزا بکه‌ن و هاناو هاوار بۆ ئه‌و زاته‌ به‌رن، واز بهێنن له‌وانه‌ی که‌ له‌ ناوه‌ پیرۆزه‌کانی خوادا لادان ده‌که‌ن و له‌ ئاینده‌دا پاداشتی ئه‌و کارو کرده‌وانه‌یان وه‌رده‌گرن که‌ ئه‌نجامیان ده‌دا
        "

    </string>
    <string-array name="Zhyan">
        <item>ناوی تەواوی</item>
        <item>ڕەچەڵەکی</item>
        <item>پشت و نەسەبی پێغەمبەرﷺ</item>
        <item>ژیانی لە پێشبانگەواز</item>
        <item>ساڵی فیل</item>
        <item>خواپەرستی پێغەمبەرﷺ لە ئەشکەوتی حراء</item>
        <item>ژیانی کۆمەڵایەتی لە شاری مەککە</item>
        <item>ژنهێنانی</item>
        <item>بەڵگەو نیشانەکانی پێغەمبەرایەتی</item>
        <item>بانگەوازی</item>
        <item>سەرەتای بانگەواز</item>
        <item>ئەوانەی بەدەم بانگەوازی ئیسلامەوەهاتن</item>
        <item>ئیسرا و میعراج</item>
        <item>کۆچکردن</item>
        <item>مەدینە پێش کۆجکردن</item>
        <item>کۆچی پێغەمبەر ﷺ و وەرچەرخانێکی مێژوویی</item>
        <item>گەیشتنی پێغمبەر ﷺ بە مەدینە</item>
        <item>دامەزراندنی دەوڵەتی ئیسلامی</item>
        <item>دروستکردنی مزگەوتی پێغەمبەرﷺ</item>
        <item>برایەتی نێوان کۆچکەران و پشتیوانان</item>
        <item>دەرئەنجامەکانی کۆچ</item>
        <item>کۆچی دوای</item>
        <item>پاش مردنی</item>
        <item>٣٠ فەرمودەی پێغمبەری خوداﷺ</item>
    </string-array>
    <string-array name="NameP">
        <item>آدم</item>
        <item>ادريس</item>
        <item>نوح</item>
        <item>هود</item>
        <item>صالح</item>
        <item>إبراهيم</item>
        <item>لوط</item>
        <item>إسمعيل</item>
        <item>إسحاق</item>
        <item>يعقوب</item>
        <item>يوسف</item>
        <item>إيوب</item>
        <item>شعيب</item>
        <item>موسى</item>
        <item>هارون</item>
        <item>ذي الكفل</item>
        <item>يوشع</item>
        <item>داود</item>
        <item>سليمان</item>
        <item>إلياس</item>
        <item>إليسع</item>
        <item>يونس</item>
        <item>زكريا</item>
        <item>يحيى</item>
        <item>عيسى</item>
        <item>محمد</item>
    </string-array>
    <string-array name="Zikr">
        <item>اللّٰهُ أَكْبَر</item>
        <item>أَسْتَغْفِرُ ﷲَ</item>
        <item>الْحَمْدُ لِلّٰهِ</item>
        <item>سُبْحَانَ اللّٰه</item>
        <item>لَا إِلٰهَ إِلَّاْ اللّٰه</item>
        <item>سُبْحَانَ اللَّهِ وَبِحَمْدِهِِِ</item>
        <item>سُبْحَانَ  اللهِ  الْعَظِيم</item>
        <item>لا حَوْلَ وَلا قُوَّةَإلا بِاللهِ</item>
        <item>اللَّهُمَّ صَلِّ عَلَى مُحَمَّدٍ وَعَلَى آلِ مُحَمَّدٍٍ</item>
        <item>سُبْحَانَ اللّٰه ، الْحَمْدُ لِلّٰه ،  لَا إِلٰهَ إِلَّاْ اللّٰه ، اللّٰهُ أَكْبَر</item>
    </string-array>
    <string name="pegambaran">پێغەمبەرەکان لە ئیسلامدا، ئەو کەسانەن کە خوا هەڵیبژاردوون بۆ ڕێنمایی کردنی خەڵک بۆ پەرستنی خوا بە بێ دانانی هاوەڵ و هاوبەش، و بانگیان بکات بۆ چاکە و ڕەوشتەکان و وازهێنان لە بتپەرستی و قەدەغەکراوەکان.</string>
    <string name="bawarbuun">باوەڕبوون بە پێغەمبەران	</string>
    <string name="bawarbuunDrezha">باوەربوون بە پێغەمبەر و نێردراوەکانی خوا یەکێکە لە پایەکانی باوەڕ لە ئیسلامدا و ئەم باوەڕبوونەش چوار بوار ئەگرێتەوە؛
\n
یەکەم/ باوەڕبوون بەوەی کە پەیامەکانیان حەق و ڕاستن و لای خواوە هاتوون، و ئەوەی بیباوەڕ بێت بە یەکێکیان ئەوا بێباوەڕ دەبێت بە هەموویان.
\n
دووەم/ باوەربوون بە هەموو ئەو پێغەمبەرانەی کە ناوەکانیان زانراوە وەک (موحەممەد و عیسا و مووسا و نووح و ئیبراهیم …هتد)، هەروەها باوەربوون بەوانەی ناوەکانیان نەزانراوە بە گشتی، خوا لە قورئاندا دەفەرموێت؛ لَقَدْ أَرْسَلْنَا رُسُلًا مِّن قَبْلِكَ مِنْهُم مَّن قَصَصْنَا عَلَيْكَ وَمِنْهُم مَّن لَّمْ نَقْصُصْ عَلَيْكَ [١]، واتە؛ ه‌ڕاستی ئێمه پێش تۆ پێغه‌مبه‌رانی تریشمان ڕه‌وانه کردووه‌، هه‌یانه سه‌رگوزه‌شته و به‌سه‌رهاتیانمان بۆ گێڕاویته‌وه‌، هه‌شیانه که سه‌رگوزه‌شته و به‌سه‌رهاتیمان بۆ نه‌گێڕاویته‌وه‌.
\n
سێیەم/ بە ڕاست دانانی ئەوەی کە ڕاستە لە هەواڵ و باسەکانیان.
\n
چوارەم/ کردەوە کردن بە شەریعەتی دوایین پێغەمبەریان کە پێغەمبەری ئیسلامە (محەمەد).
</string>
    <string name="nawyanhatwa">ئەو پێغەمبەرانەی لە قورئاندا ناویان هاتووە</string>
    <string name="nawyanhatwaDrezha">لە قورئاندا ناوی ٢٥ پێغەمبەر هاتووە، کە ئەمانەی خوارەوەن؛
\n
پێغەمبەرەکان لە قورئاندا</string>
    <string name="xawantwana">خاوەن توانا و خۆڕاگرەکان</string>
    <string name="xawantwanaDrezha">خاوەن توانا و خۆڕاگرەکان (أولوا العزم)، لە ئیسلامدا پێنج پێغەمبەرن کە خاوەن توان و خۆڕاگریین لە ناو پێغەمبەرەکانی خوادا ئەوانیش (محەمەد و عیسا و موسا و نوح و ئیبراهیم)ن، وەک لەم ئایەتەدا هاتووە؛ وَإِذْ أَخَذْنَا مِنَ النَّبِيِّينَ مِيثَاقَهُمْ وَمِنكَ وَمِن نُّوحٍ وَإِبْرَاهِيمَ وَمُوسَىٰ وَعِيسَى ابْنِ مَرْيَمَ ۖ وَأَخَذْنَا مِنْهُم مِّيثَاقًا غَلِيظًا [٢]، واتە؛ په‌یمانمان له‌پێغه‌مبه‌ران وه‌رگرتووه په‌یمانی یه‌کتاپه‌ره‌ستی، په‌یمانی گه‌یاندنی بانگه‌وازی خوا، به‌تایبه‌ت تۆ ئه‌ی محمد و له‌نوح و ئیبراهیم و موسا و عیسای کوڕی مه‌ریه‌م، بێگومان په‌یمانێکی به‌هێز و پته‌ومان لێ وه‌رگرتن…</string>
    <string name="FName">ناوی تەواوی</string>
    <string name="KtebaPirozekan">کتێبە پیرۆزەکان لە ئیسلامدا</string>
    <string name="KtebaPirozekanDrezha">کتێبە ئاسمانییەکان، بە پێی ئیسلام ئەو کتێب و پەیامانەن کە خوا دایبەزاندوون بۆ پێغەمبەر و نێردراوەکانی، وەک لە قورئاندا هاتووە؛ ﴿إِنَّا أَوْحَيْنَا إِلَيْكَ كَمَا أَوْحَيْنَا إِلَى نُوحٍ وَالنَّبِيِّينَ مِن بَعْدِهِ وَأَوْحَيْنَا إِلَى إِبْرَاهِيمَ وَإِسْمَاعِيلَ وَإِسْحَاقَ وَيَعْقُوبَ وَالأَسْبَاطِ وَعِيسَى وَأَيُّوبَ وَيُونُسَ وَهَارُونَ وَسُلَيْمَانَ وَآتَيْنَا دَأوُودَ زَبُورًا﴾ [١]، واتە؛ به‌ڕاستی ئێمه نیگامان بۆ تۆ ناردووه هه‌ر وه‌کو چۆن نیگامان بۆ نوح و پێغه‌مبه‌رانی دوای ئه‌و ناردووه‌، هه‌روه‌ها نیگامان ناردووه بۆ ئیبراهیم و ئیسماعیل و ئیسحاق و یه‌عقوب و (هه‌ندێک) له کوڕانی یه‌عقوب و عیسا و ئه‌یوب و یونس و هاروون و سوله‌یمان، زه‌بوریشمان به داود به‌خشیووه.</string>
    <string name="bawarBunBaKteb">باوەڕبوون بە کتێبە ئاسمانییەکان</string>
    <string name="bawarBunBaKtebDrezha">باوەڕبوون بە کتێبە ئاسمانییەکان لە ئیسلامدا یەکێکە لە پایەکانی باوەڕ، وەک لەم ئایەتەدا هاتووە؛ "و الذين يؤمنون بما أُنزل إليك وما أُنزل من قبلك وبالآخرة هم يوقنون"، [٢] واتە؛ (له هه‌مان كاتدا) ئه‌وانه باوه‌ڕ ده‌هێنن به‌و (په‌یامه‌ی) كه بۆ تۆ (ئه‌ی محمد) دابه‌زێنراوه و به‌و په‌یامانه‌ش كه بۆ (پێغه‌مبه‌رانی‎ پێش تۆ) دابه‌زێنراوه‌، دڵنیاش ده‌بن كه ڕۆژی دوایی پێش دێت و قیامه‌ت هه‌ر به‌رپا ده‌بێت.

\n

باوەڕبوون بە کتێبەکان چوار بوار دەگرێتەوە؛
        \n

یەکەم؛ باوەڕبوون بەوەی کە بەڕاستی دابەزینیان لای خواوەیە.
\n
دووەم؛ باوەڕبوون بەوانەی ناوەکانیان ئەزانرێت وەک؛ قورئان کە دابەزیووە بۆ پێغەمبەری ئیسلام، و زەبوور دابەزیووە بۆ داوود و ئینجیل دابەزیووە بۆ عیسا و تەورات دابەزیووە بۆ موسا و سوحفی ئیبراهیم، و هەروەها باوەڕبوون بەو کتێبانەی ناوەکانیان نازانرێت.
\n
سێیەم؛ بەڕاست دانانی ئەوەی ڕاستە لە هەواڵەکانیان، وەک هەواڵەکانی قورئان، و ئەو هەواڵانەش کە نەگۆڕاوون یان دەستکاری نەکراون لە کتێبەکانی پێشوو.
\n
چوارەم؛ کردەوەکردن بەو حوکمانەی کە هەڵنەوەشێنراوەتەوە تیایاندا، ڕازی بوون و مل کەچبوون پێیان.

</string>
    <string name="laQuran">ئەو کتێبانەی لە قورئاندا ناویان هاتووە</string>
    <string name="zabur">یەکەم/ زەبوور</string>
    <string name="zaburDRezha">زەبوور ئەو کتێبەیە کە خوا بۆ داوودی دابەزاندووە وەک لەم ئایەتەدا هاتووە؛ : ﴿.. وَآتَيْنَا دَأوُودَ زَبُورًا﴾ [٣]، واتە؛ زه‌بوریشمان به داود به‌خشیووه.</string>
    <string name="tawrat">دووەم/ تەورات</string>
    <string name="tawratDrezha">بە پێی بیروباوەڕی ئیسلامی تەورات ئەو کتێبەیە کە بۆ موسا دابەزێنراوە، کە کتێبەکی مەزن بووە و ڕوناکی و ڕێنمایی لە خۆ گرتووە، لە قورئاندا دەربارەی هاتووە؛
     \n

﴿إِنَّا أَنزَلْنَا التَّوْرَاةَ فِيهَا هُدًى وَنُورٌ يَحْكُمُ بِهَا النَّبِيُّونَ الَّذِينَ أَسْلَمُوا لِلَّذِينَ هَادُوا وَالرَّبَّانِيُّونَ وَالأَحْبَارُ بِمَا اسْتُحْفِظُوا مِنْ كِتَابِ اللَّهِ﴾ [٤]، واتە؛ به‌ڕاستی ئێمه کاتێک ته‌وراتمان نارده خواره‌وه ڕێنموویی تیادا بوو، نوور و ڕووناکیش بوو، ئه‌و پێغه‌مبه‌رانه‌ی که هه‌میشه ملکه‌چ و فه‌رمانبه‌ردار بوون حوکمی ئه‌وانه‌یان پێده‌کرد که ببونه جوله‌که‌، هه‌روه‌ها زانا په‌روه‌ردگار ناسه‌کانیان و زانا شه‌رع ناسه‌کانیشیان، حوکمیان ده‌کرد به‌وه‌ی داوایان لێکرابوو بیپارێزن، که ئه‌ویش کتێبی خوا (ته‌وراته‌).
\n
﴿ثُمَّ آتَيْنَا مُوسَى الْكِتَابَ تَمَامًا عَلَى الَّذِي أَحْسَنَ وَتَفْصِيلًا لِكُلِّ شَيْءٍ وَهُدًى وَرَحْمَةً لَعَلَّهُمْ بِلِقَاءِ رَبِّهِمْ يُؤْمِنُونَ﴾ [٥]، واتە؛ پاشان کتێبی ته‌وراتمان به موسا به‌خشی بۆ ئه‌وه‌ی نازو نیعمه‌تی ته‌واو بڕژین به‌سه‌ر ئه‌و که‌سه‌دا که به‌چاکی پیاده‌ی ده‌کات و جیاکه‌ره‌وه و ڕوون که‌ره‌وه‌ی هه‌موو شتێک بێت و ڕێنموویی و میهره‌بانیش بێت، بۆ ئه‌وه‌ی ئه‌وانه باوه‌ڕی دامه‌زراو بهێنن به‌گه‌یشتنه‌وه‌یان به په‌روه‌ردگاریان.
\n
و خوا لە قورئاندا ئاماژە بەوە دەکات کە تەورات دەستکاری کراوە و تێکدراوە، لەبەرئەوە جارێکی تر خوا پێغەمبەر عیسای ناردووە بۆ ڕێنمایی کردنی یەهود بۆ ڕاستیەکان جارێکی تر.
</string>
    <string name="Enjil">سێیەم/ ئینجیل</string>
    <string name="EnjilDrezha">بە پێی بیروباوەڕی ئیسلامی، ئینجیل ئەو کتێبەیە کە خوا دایبەزاندووە بۆ مەسیح (عیسا) وەک تەواوکەرێک بۆ تەورات، و پاڵپشت کردنی و بانگەواز کردن بۆ پەرستنی خوا بە بێ هاوەڵ.
\n
بەڵام ئینجیل بە پێی بیروباوەری مەسیحی کتێبی پیرۆزی مەسیحیەکانە و تەورات و ئنجیل ئەگرێتەوە، و چوار ئینجیل هەیە؛
\n
ئینجیلی یوحەنا
\n
ئینجیلی مرقس
\n
ئینجیلی مەتتا
\n
ئینجیلی لووقا
\n
خوا لە قورئاندا ئاماژەی بەوەکردووە کە ئینجیل گۆڕانکاری و دەسنکاری تێدا کراوە، لەبەر ئەوە پێغەمبەرمحەمەدی ناردووە بۆ ڕێنماییکردنەوەی خەڵک جارێکی تر.
</string>
    <string name="Quran">چوارەم/ قورئانی پیرۆز</string>
    <string name="QuranDrezha">قورئان، ووتە و گوڤتاری خوایە، خوا لەسەر ڕاستیەکان پێی ئەدوێت و دایبەزانووە بۆسەر پێغەمبەر محەمەد، و باوەڕداران باوەڕی تەواویان پێیەتی و بە ووتەی خوای ئەزانن.

\n

و بە پێی بیروباوەری ئیسلامی قورئان دوایین کتێبی ئاسمانییە، لە هەموویان درێژتر و کشتگیرترە، دەربارەی قورئان چەند ئایەتێک لە قورئاندا هاتووە؛
\n


﴿وَأَنزَلْنَا إِلَيْكَ الْكِتَابَ بِالْحَقِّ مُصَدِّقًا لِمَا بَيْنَ يَدَيْهِ مِنْ الْكِتَابِ وَمُهَيْمِنًا عَلَيْهِ﴾[٦]، واتە؛ ئێمه قورئانمان هاوڕێ له‌گه‌ڵ هه‌موو حه‌قیقه‌ت و ڕاستیه‌کدا بۆ تۆ دابه‌زاندووه‌، ڕاستی و دروستی کتێبه‌کانی پێش خۆیشی دیاری ده‌کات و چاودێره به‌سه‌ر هه‌موویاندا.
\n
﴿وَمَا كَانَ هَذَا الْقُرْآنُ أَنْ يُفْتَرَى مِنْ دُونِ اللَّهِ وَلَكِنْ تَصْدِيقَ الَّذِي بَيْنَ يَدَيْهِ وَتَفْصِيلَ الْكِتَابِ لا رَيْبَ فِيهِ مِنْ رَبِّ الْعَالَمِينَ﴾ [٧]، واتە؛ وه‌نه‌بێت ئه‌م قورئانه له‌لایه‌ن که‌سێکه‌وه داڕێژرا بێت و هه‌ڵبه‌سترا بێت جگه له‌خوا، به‌ڵکو ڕاستی و ڕه‌وانی کتێبه ئاسمانیه‌کانی پێش خۆشی دووپات ده‌کاته‌وه‌، هه‌روه‌ها ڕوونکه‌ره‌وه‌ی بیرو باوه‌ڕو ئه‌رکه‌کانه‌، به‌ڕاستی هیچ گومان له‌وه‌دا نیه که ئه‌م قورئانه‌له‌لایه‌ن په‌روه‌ردگاری هه‌موو جیهانه‌وه ڕه‌وانه‌کراوه‌.
\n
﴿مَا كَانَ حَدِيثًا يُفْتَرَى وَلَكِنْ تَصْدِيقَ الَّذِي بَيْنَ يَدَيْهِ وَتَفْصِيلَ كُلِّ شَيْءٍ وَهُدًى وَرَحْمَةً لِقَوْمٍ يُؤْمِنُونَ﴾ [٨]، واتە؛ وه‌نه‌بێت ئه‌م قورئانه قسه‌و باسێك بێت هه‌ڵبه‌سترابێت، به‌ڵکو به‌ڕاست دانه‌ری ئه‌وه‌یه که له پێش خۆیه‌وه هاتووه (ته‌ورات و ئینجیل) و ڕوونکه‌ره‌وه و جیاکردنه‌وه‌ی هه‌موو شتێکی پێویسته له‌ئایندا، ڕێنمومیی و ڕه‌حمه‌تیشه بۆ که‌سانێك باوه‌ڕ ده‌هێنن.
\n
و قورئان پارێزراوە لە هەر دەستکاریکردن و تێکدان و گۆڕانکارییەک و هەموو جیهانی ئیسلامی یەک نوسخەی قورئان کۆیان دەکاتەوە تا ئێستا.
</string>
    <string name="sarchawa">سەرچاوەکان</string>
    <string name="yek">١ سورەتی نیسا، ئایەتی ١٦٣</string>
    <string name="dw">٢ سورەتی بەقەڕە، ٤</string>
    <string name="se">٣ سورەتی مائیدە، ٤٤</string>
    <string name="chwar">٤ سورەتی ئەنعام، ١٥٤</string>
    <string name="penj">٥  سورەتی مائیدە: ٤٨</string>
    <string name="shash">٦ سورەتی يونس: ٣٧</string>
    <string name="haft">٧  سورەتی يوسف: ١١١</string>
</resources>