<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".Kteb">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rabar015"
            android:text="کتێبە ئاسمانیەکان"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/rabar015"
                android:textColor="@color/colorPrimary"
                android:text="@string/KtebaPirozekan"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:layout_gravity="center"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rabar014"
                android:textColor="@color/black"
                android:text="@string/KtebaPirozekanDrezha"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textAlignment="textStart"
                android:textStyle="bold"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/rabar015"
                android:textColor="@color/colorPrimary"
                android:text="@string/bawarBunBaKteb"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:layout_gravity="center"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rabar014"
                android:textColor="@color/black"
                android:text="@string/bawarBunBaKtebDrezha"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="right"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/rabar015"
                android:textColor="@color/colorPrimary"
                android:text="@string/laQuran"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:layout_gravity="center"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/rabar015"
                android:textColor="@color/colorPrimary"
                android:text="@string/zabur"
                android:layout_marginTop="10dp"
                android:textSize="23sp"
                android:layout_gravity="right"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rabar014"
                android:textColor="@color/black"
                android:text="@string/zaburDRezha"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="right"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/rabar015"
                android:textColor="@color/colorPrimary"
                android:text="@string/tawrat"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:layout_gravity="right"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rabar014"
                android:textColor="@color/black"
                android:text="@string/tawratDrezha"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="right"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/rabar015"
                android:textColor="@color/colorPrimary"
                android:text="@string/Enjil"
                android:layout_marginTop="10dp"
                android:textSize="23dp"
                android:layout_gravity="right"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rabar014"
                android:textColor="@color/black"
                android:text="@string/EnjilDrezha"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="right"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/rabar015"
                android:textColor="@color/colorPrimary"
                android:text="@string/Quran"
                android:layout_marginTop="10dp"
                android:textSize="23sp"
                android:layout_gravity="right"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rabar014"
                android:textColor="@color/black"
                android:text="@string/QuranDrezha"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="right"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/rabar015"
                android:textColor="@color/colorPrimary"
                android:text="@string/sarchawa"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:layout_gravity="right"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/rabar015"
                android:textColor="@color/colorPrimary"
                android:text="@string/yek"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:layout_gravity="right"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/rabar015"
                android:textColor="@color/colorPrimary"
                android:text="@string/dw"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:layout_gravity="right"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/rabar015"
                android:textColor="@color/colorPrimary"
                android:text="@string/se"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:layout_gravity="right"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/rabar015"
                android:textColor="@color/colorPrimary"
                android:text="@string/chwar"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:layout_gravity="right"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/rabar015"
                android:textColor="@color/colorPrimary"
                android:text="@string/penj"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:layout_gravity="right"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/rabar015"
                android:textColor="@color/colorPrimary"
                android:text="@string/shash"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:layout_gravity="right"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/rabar015"
                android:textColor="@color/colorPrimary"
                android:text="@string/haft"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:layout_gravity="right"

                />



        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>